add extraction logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 from-to-repr = { version = "0.2", features = ["from_to_other"] }
+regex = { version = "1.10" }
 smallvec = { version = "1.13", features = ["const_generics"] }
